2009-04-16  Alexander Larsson  <alexl@redhat.com>

	Bug 141557 – Svg backgrounds not scaled correctly

	* gnome-bg.c:
	(get_as_pixbuf):
	When loading an svg, load at the requested zoom level
	instead of resizing after rendering.
	Patch from Robert Ancell

==================== 2.26.1 ====================

2009-04-08  Federico Mena Quintero  <federico@novell.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=568160 - Use
	XRRGetScreenResourcesCurrent() if available (i.e. we were compiled
	with RANDR 1.3 and it is actually available at runtime), when we
	only need to fetch the current RANDR status.  Use
	XRRGetScreenResources() as usual when we do need to re-probe.
	Patch by Alberto Milone <albertomilone@alice.it>, with minor
	modifications:

	* gnome-rr.c (fill_out_screen_info): Take a needs_reprobe
	argument.  We'll use XRRGetScreenResourcesCurrent() or
	XRRGetScreenResources() as appropriate.
	(screen_on_event): Don't re-probe RANDR for all events; just for
	RRScreenChangeNotify.  This avoids expensive probing for (e.g.)
	when only output properties change (RRNotify).

2009-03-26  Alexander Larsson  <alexl@redhat.com>

	* gnome-bg.c (gnome_bg_get_pixmap_from_root):
	push/pop error handler around getting the existing root pixmap in case
	the root properties point to something wrong.

==================== 2.26.0 ====================

2009-03-06  Federico Mena Quintero  <federico@novell.com>

	Grab the X server while tweaking the RANDR configuration.

	* gnome-rr-private.h: New uninstalled header.  This only contains
	the definition of struct GnomeRRScreen, so that it can be used
	from gnome-rr-config.c as well as gnome-rr.c.

	* gnome-rr.c: Include gnome-rr-private.h; move struct
	GnomeRRScreen to that file.

	* Makefile.am (libgnome_desktop_2_la_SOURCES): Add gnome-rr-private.h.

	* gnome-rr-config.c (crtc_assignment_apply): Grab the server while
	tweaking the CRTCs and screen, so that apps that request RANDR
	notifications will only receive the final result, not the