@@ -440,13 +440,13 @@ gnome_desktop_thumbnail_factory_init (GnomeDesktopThumbnailFactory *factory)
   
   priv->lock = g_mutex_new ();
 
-  gnome_desktop_thumbnail_factory_reread_scripts (factory);
-
   client = gconf_client_get_default ();
   gconf_client_add_dir (client,
-			"/desktop/gnome",
-			GCONF_CLIENT_PRELOAD_NONE, NULL);
+			"/desktop/gnome/thumbnailers",
+			GCONF_CLIENT_PRELOAD_RECURSIVE, NULL);
 
+  gnome_desktop_thumbnail_factory_reread_scripts (factory);
+  
   priv->thumbnailers_notify = gconf_client_notify_add (client, "/desktop/gnome/thumbnailers",
 						       schedule_reread, factory, NULL,
 						       NULL);
