@@ -1,5 +1,13 @@
 2009-04-16  Alexander Larsson  <alexl@redhat.com>
 
+	* gnome-desktop-thumbnail.c:
+	(gnome_desktop_thumbnail_factory_init):
+	Add /gnome/desktop/thumbnails, not /gnome/desktop
+	preload recursive and make sure we read the dir
+	after that.
+
+2009-04-16  Alexander Larsson  <alexl@redhat.com>
+
 	Bug 141557 – Svg backgrounds not scaled correctly
 
 	* gnome-bg.c:
